# osu-receptor-v2

./: .gitignore  README.md  build.bat  main.py  pyproject.toml  settings.json  settings.yaml
osu_receptor/: __main__.py  argparse.py  build.py  const.py  images.py  inject.py  main.py  settings.py  skin.py  source.py
source/example/: skin.yaml
src/: __main__.py  build.py  images.py  inject.py  settings.py  source.py
